# q2048q

./: README.md
src/: CMakeLists.txt  game2048.pro  main.cpp  mainwindow.cpp  mainwindow.h  tileboard.cpp  tileboard.h
